crates/config/tests/unit/snapshots/main__unit__appearance_file__the_commented_fixture_parses_into_every_table.snap
---
source: crates/config/tests/unit/appearance_file.rs
expression: parsed
---
TomlAppearance {
    card: TomlCard {
        format_chips: Shown,
        speed_chip: Always,
    },
    progress: TomlProgress {
        height: Pixels(
            4,
        ),
        radius: None,
        fill: None,
        groove: None,
        progress_time: Elapsed,
    },
    cover: TomlCover {
        mode: Vinyl,
        cover_cells: TomlCoverCells {
            width: 20,
            height: 8,
        },
        brackets: Hidden,
    },
    layout: TomlLayout {
        full_min_width: 60,
        full_min_height: 19,
        compact_min_width: 30,
        compact_min_height: 13,
        min_width: 48,
        min_height: 16,
        mode: Auto,
    },
    window: TomlWindow {
        animations: On,
        key_hints: Shown,
    },
}
